--- a/src/css/home.css
+++ b/src/css/home.css
@@ -5,9 +5,76 @@
   --third: #b2b2b2;
   --forth: #2f2f2f;
   --five: #f8f8ff;
+  --six: #f3f3f3;
 }
 
 .homepage {
   width: 100%;
   height: auto;
+}
+
+/* STATISTICS */
+
+.homepage .detail-container {
+  margin: 50px 0 50px 0;
+  width: 100%;
+  height: 360px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.homepage .detail-container .detail-info {
+  position: relative;
+  width: 560px;
+  height: 360px;
+  background-image: url("../../public/img/ad-block-1.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.homepage .detail-container .detail-info1 {
+  position: relative;
+  width: 560px;
+  height: 360px;
+  background-image: url("../../public/img/ad-block-2.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.homepage .detail-container .detail-box {
+  position: absolute;
+  top: 35%;
+  left: 7%;
+}
+
+.homepage .detail-container .detail-box h4 {
+  font-family: "Poppins";
+  font-weight: 600;
+  line-height: 0px;
+  font-size: 30px;
+  color: var(--forth);
+}
+
+.homepage .detail-container .detail-box p {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 16px;
+  color: var(--forth);
+}
+
+/* ADVERTISEMENT */
+
+.homepage .adv-div {
+  width: 100%;
+  height: 360px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid red;
+  background-color: var(--six);
 }
