--- a/src/css/home.css
+++ b/src/css/home.css
@@ -13,10 +13,10 @@
   height: auto;
 }
 
-/* STATISTICS */
+/* BRAND DETAIL */
 
 .homepage .detail-container {
-  margin: 50px 0 50px 0;
+  margin-top: 50px;
   width: 100%;
   height: 360px;
   display: flex;
@@ -27,7 +27,7 @@
 
 .homepage .detail-container .detail-info {
   position: relative;
-  width: 560px;
+  width: 600px;
   height: 360px;
   background-image: url("../../public/img/ad-block-1.jpg");
   background-repeat: no-repeat;
@@ -37,7 +37,7 @@
 
 .homepage .detail-container .detail-info1 {
   position: relative;
-  width: 560px;
+  width: 600px;
   height: 360px;
   background-image: url("../../public/img/ad-block-2.jpg");
   background-repeat: no-repeat;
@@ -69,12 +69,135 @@
 /* ADVERTISEMENT */
 
 .homepage .adv-div {
+  margin-top: 50px;
+  padding-top: 40px;
   width: 100%;
-  height: 360px;
+  height: 460px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid red;
   background-color: var(--six);
+}
+
+.homepage .adv-div .adv-header {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.homepage .adv-div .adv-header h3 {
+  font-size: 34px;
+  font-weight: 500;
+  line-height: 0px;
+  color: var(--forth);
+  font-family: "Poppins";
+}
+
+.homepage .adv-carusel {
+  width: 100%;
+  height: 330px;
+}
+
+.homepage .adv-carusel .mySwiper {
+  width: 100%;
+  height: 330px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.homepage .adv-carusel .mySwiper .swiper-slides {
+  width: 100%;
+  height: 330px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.homepage .adv-carusel .mySwiper .slides-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 180px;
+  border-radius: 50%;
+}
+
+.homepage .adv-carusel .mySwiper .slide-txt-info {
+  font-size: 17px;
+  font-weight: 500;
+  font-family: "Poppins";
+}
+
+.homepage .adv-carusel .mySwiper .slide-txt {
+  width: 150px;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+
+.homepage .adv-carusel .mySwiper .slide-txt img {
+  width: 17px;
+  height: auto;
+}
+
+/* POPULAR WATCHES */
+
+.homepage .popular-watches-frame {
+  padding-top: 50px;
+  width: 100%;
+  height: 600px;
+  display: flex;
+  background: #f8f8ff;
+}
+
+.homepage .popular-watches-frame .popular-section {
+  margin-top: 45px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.homepage .popular-watches-frame .popular-section .category-title {
+  text-align: center;
+  font-family: "Poppins";
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 1.44px;
+  line-height: 20px;
+  color: #000;
+}
+
+.homepage .popular-watches-frame .popular-section .cards-frame {
+  width: 100%;
+  margin-top: 43px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.homepage .popular-watches-frame .cards-frame .card {
+  min-height: 430px;
+  min-width: 300px;
+  cursor: pointer;
+}
+
+.homepage .popular-watches-frame .cards-frame .card .card-cover {
+  background: linear-gradient(
+      to top,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0) 200px
+    ),
+    linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0) 150px);
 }
