--- a/src/css/home.css
+++ b/src/css/home.css
@@ -154,8 +154,9 @@
 
 .homepage .popular-watches-frame {
   padding-top: 50px;
+  padding-bottom: 20px;
   width: 100%;
-  height: 600px;
+  height: auto;
   display: flex;
   background: #f8f8ff;
 }
@@ -183,21 +184,117 @@
   width: 100%;
   margin-top: 43px;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap: 42px;
 }
 
 .homepage .popular-watches-frame .cards-frame .card {
-  min-height: 430px;
-  min-width: 300px;
+  border-radius: 0px;
+  min-height: 400px;
+  min-width: 280px;
   cursor: pointer;
 }
 
 .homepage .popular-watches-frame .cards-frame .card .card-cover {
+  border-radius: 0px;
   background: linear-gradient(
       to top,
       rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 0) 200px
     ),
     linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0) 150px);
+}
+
+/* NEW PRODUCTS */
+
+.homepage .new-products-frame {
+  width: 100%;
+  height: 605px;
+  display: flex;
+}
+
+.homepage .new-products-frame .main {
+  margin-top: 45px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.homepage .new-products-frame .main .category-title {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 43px;
+}
+
+.homepage .new-products-frame .main .cards-frame {
+  width: 100%;
+  margin: 47px 2px 2px 2px;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.homepage .new-products-frame .main .card {
+  height: 335px;
+  width: 290px;
+  cursor: pointer;
+}
+
+.homepage .new-products-frame .product-sale {
+  position: absolute;
+  margin-top: 10px;
+  z-index: 100;
+  width: 60px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--secondary);
+  box-shadow: 4px 6px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 21px;
+  color: var(--six);
+}
+
+.homepage .new-products-frame .product-detail {
+  width: auto;
+  height: 49%;
+  display: flex;
+  justify-content: center;
+  margin-top: -12px;
+  border-top: 1px solid;
+  border-color: #f8f8ff;
+  background-color: #fafbfb;
+}
+
+.homepage .new-products-frame .product-detail .info {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.homepage .new-products-frame .product-detail .title {
+  width: 65px;
+  font-weight: 500;
+}
+
+.homepage .new-products-frame .product-detail .price {
+  margin-left: 10px;
+  width: 20px;
+  font-weight: 500;
+}
+
+.homepage .new-products-frame .product-detail .views {
+  display: flex;
+  align-items: center;
+  font-weight: 500;
 }
