--- a/src/css/home.css
+++ b/src/css/home.css
@@ -207,6 +207,21 @@
     linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0) 150px);
 }
 
+.homepage .popular-watches-frame .no-data {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: capitalize;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 34px;
+  color: var(--secondary);
+}
+
 /* NEW PRODUCTS */
 
 .homepage .new-products-frame {
@@ -297,4 +312,19 @@
   display: flex;
   align-items: center;
   font-weight: 500;
+}
+
+.homepage .new-products-frame .no-data {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: capitalize;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 34px;
+  color: var(--secondary);
 }
