--- a/src/css/home.css
+++ b/src/css/home.css
@@ -226,7 +226,7 @@
 
 .homepage .new-products-frame {
   width: 100%;
-  height: 605px;
+  height: 520px;
   display: flex;
 }
 
@@ -327,4 +327,72 @@
   font-size: 30px;
   line-height: 34px;
   color: var(--secondary);
+}
+
+/* TESTIMONALS */
+.homepage .testimonal {
+  width: 100%;
+  height: 500px;
+  background: url("../../public/img/testimonial-bg.jpg");
+}
+
+.homepage .testimonal-frame {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 25px;
+  align-items: center;
+}
+
+.homepage .testimonal-frame .card-title {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+}
+.homepage .testimonal-frame .mySwiper {
+  width: 100%;
+  height: 330px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.homepage .testimonal-frame .mySwiper .testimonal-slide {
+  width: 400px;
+  height: 300px;
+}
+
+.homepage .testimonal-frame .mySwiper .testimonal-slide .slide {
+  width: 380px;
+  height: 320px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--five);
+  line-height: normal;
+}
+.homepage .testimonal-frame .mySwiper .testimonal-slide .slide img {
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+}
+
+.homepage .testimonal-frame .mySwiper .testimonal-slide p {
+  width: 250px;
+  height: auto;
+  text-align: center;
+  font-family: "Poppins";
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+}
+
+.homepage .testimonal-frame .mySwiper .slide .user-name {
+  margin-top: 5px;
+  font-size: 18px;
+  border-bottom: 1.5px solid var(--primary);
 }
