--- a/src/css/home.css
+++ b/src/css/home.css
@@ -197,6 +197,11 @@
   cursor: pointer;
 }
 
+.homepage .popular-watches-frame .cards-frame .card .card-img {
+  height: 400px;
+  width: 280px;
+}
+
 .homepage .popular-watches-frame .cards-frame .card .card-cover {
   border-radius: 0px;
   background: linear-gradient(
@@ -260,10 +265,12 @@
 
 .homepage .new-products-frame .product-sale {
   position: absolute;
-  margin-top: 10px;
-  z-index: 100;
-  width: 60px;
-  height: 30px;
+  margin-top: 7px;
+  margin-left: -7px;
+  z-index: 10;
+  width: auto;
+  padding: 0 4px 0;
+  height: 25px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -273,7 +280,7 @@
   font-family: "Poppins";
   font-style: normal;
   font-weight: 500;
-  font-size: 15px;
+  font-size: 12px;
   line-height: 21px;
   color: var(--six);
 }
@@ -298,7 +305,7 @@
 }
 
 .homepage .new-products-frame .product-detail .title {
-  width: 65px;
+  width: 130px;
   font-weight: 500;
 }
 
