--- a/src/css/products.css
+++ b/src/css/products.css
@@ -168,12 +168,17 @@
   width: 100%;
   height: 330px;
   transition: opacity 0.5s ease;
+  cursor: pointer;
   background: linear-gradient(
       to top,
-      rgba(0, 0, 0, 0.4),
-      rgba(0, 0, 0, 0) 150px
+      rgba(35, 151, 143, 0.2),
+      rgba(18, 178, 170, 0) 100px
     ),
-    linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0) 300px);
+    linear-gradient(
+      to top,
+      rgba(18, 116, 121, 0.5),
+      rgba(17, 177, 172, 0) 250px
+    );
 }
 
 .products-page .products .product-img:hover .img-cover {
@@ -181,18 +186,21 @@
 }
 
 .products-page .products .product-card .product-img .product-sale {
-  margin: 10px;
-  width: 60px;
-  height: 30px;
+  position: absolute;
+  margin: 8px;
+  z-index: 10;
+  width: auto;
+  padding: 0 4px 0;
+  height: 25px;
   display: flex;
   align-items: center;
   justify-content: center;
   background: var(--secondary);
-  box-shadow: 4px 6px 20px #0000001a;
-  border-radius: 4px;
+  box-shadow: 4px 6px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
   font-family: "Poppins";
   font-style: normal;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 12px;
   line-height: 21px;
   color: var(--six);
@@ -268,7 +276,6 @@
   font-weight: 600;
   line-height: 30px;
   letter-spacing: 0%;
-  cursor: pointer;
 }
 
 .products-page .products .product-desc .product-monety {
@@ -276,7 +283,7 @@
   font-family: "Poppins";
   font-style: normal;
   font-weight: 600;
-  font-size: 22px;
+  font-size: 20px;
   line-height: 36px;
   color: #504c4c;
   display: flex;
