--- a/src/css/products.css
+++ b/src/css/products.css
@@ -51,6 +51,7 @@
   width: 210px;
   height: 36px;
   padding-left: 7px;
+  outline: none;
   border: 0.5px solid var(--primary);
 }
 
@@ -123,8 +124,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: transparent;
-  color: var(--forth);
   border-bottom: 1px solid var(--primary);
   cursor: pointer;
 }
@@ -135,9 +134,9 @@
   height: auto;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-wrap: wrap;
-  gap: 28px;
+  gap: 25px;
 }
 
 .products-page .products .product-card {
