--- a/src/css/products.css
+++ b/src/css/products.css
@@ -121,6 +121,8 @@
   width: 260px;
   height: 40px;
   display: flex;
+  background-color: #44adca;
+  color: #f8f8ff;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -403,7 +405,7 @@
 
 .products-page .product-img .mySwiper .slide-img img {
   width: 105px;
-  height: 120px;
+  height: 112px;
   border: 1px solid rgb(233, 221, 221);
 }
 .products-page .chosen-product-frame .product-detail {
