--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -23,7 +23,7 @@
 }
 
 .home-navbar .menu .links {
-  min-width: 750px;
+  min-width: 850px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -67,8 +67,8 @@
 }
 
 .home-navbar .links .left-navbar {
-  width: 100px;
-  height: 40px;
+  width: 150px;
+  height: 45px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -89,6 +89,13 @@
 .home-navbar .left-navbar .login-button .login-icon {
   font-size: 25px;
   margin: 0;
+  cursor: pointer;
+}
+
+.home-navbar .left-navbar .user-avatar {
+  width: 45px;
+  height: 45px;
+  border-radius: 24px;
   cursor: pointer;
 }
 
@@ -152,7 +159,7 @@
 }
 
 .other-navbar .menu .links {
-  min-width: 750px;
+  min-width: 850px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -167,8 +174,8 @@
 }
 
 .other-navbar .links .left-navbar {
-  width: 100px;
-  height: 40px;
+  width: 150px;
+  height: 45px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -188,6 +195,13 @@
 .other-navbar .left-navbar .login-button .login-icon {
   font-size: 25px;
   margin: 0;
+  cursor: pointer;
+}
+
+.other-navbar .left-navbar .user-avatar {
+  width: 45px;
+  height: 45px;
+  border-radius: 24px;
   cursor: pointer;
 }
 
