--- a/src/css/order.css
+++ b/src/css/order.css
@@ -269,6 +269,12 @@
   align-items: center;
 }
 
+.order-page .order-right .order-user-img .order-user-avatar {
+  width: 125px;
+  height: 112px;
+  border-radius: 40%;
+}
+
 .order-page .order-right .order-user-img .order-user-icon-box {
   position: absolute;
   padding: 5px;
@@ -291,7 +297,7 @@
   height: 37px;
   color: var(--five);
   font-family: "Poppins";
-  font-size: 28px;
+  font-size: 25px;
   font-weight: 500;
   line-height: 36px;
   text-align: center;
@@ -301,10 +307,8 @@
   width: 80px;
   height: 37px;
   color: rgb(161, 161, 161);
-  font-family: "Poppins";
-  font-size: 24px;
+  font-size: 16px;
   font-weight: 500;
-  line-height: 36px;
   text-align: center;
 }
 
@@ -352,8 +356,8 @@
   height: 50px;
   color: rgb(119, 119, 119);
   font-family: "Poppins";
-  font-size: 16px;
-  font-weight: 500;
+  font-size: 15px;
+  font-weight: 400;
   line-height: 36px;
   padding: 0 8px 0;
   border: 1px solid var(--forth);
@@ -378,8 +382,8 @@
   border-radius: 5px;
   color: rgb(119, 119, 119);
   font-family: "Poppins";
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 15px;
+  font-weight: 400;
   line-height: 17px;
   padding: 0 8px 0;
 }
