--- a/src/css/order.css
+++ b/src/css/order.css
@@ -1,7 +1,7 @@
 :root {
   --background: #ffffff;
   --primary: #44adca;
-  --secondary: #d34258;
+  --secondary: #ff00a1;
   --third: #b2b2b2;
   --forth: #2f2f2f;
   --five: #f8f8f8;
@@ -198,7 +198,7 @@
   border-radius: 7px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   max-height: 40px;
-  background: var(--secondary);
+  background: #ff00a1;
   color: var(--five);
 }
 
